# pry

./: .gitignore  AGENTS.md  Cargo.toml  README.md  initial-plan.md
.agents/: hitl-adapter.yaml
catalog/: python.toml  typescript.toml
charness-artifacts/critique/: 2026-06-13-spec-layer0-redesign.md  2026-06-13-spec-layer0.md  2026-06-15-112007-packet.json  2026-06-15-112007-packet.md  2026-06-15-e9-closeout-disposition-review.md  2026-06-15-s1-corpus-packet.md  2026-06-15-s3-enrichment-packet.md  2026-06-16-di-seam-code-critique.md  2026-06-16-floor-kill-critique.md  2026-06-16-floor-spec-critique.md  2026-06-16-pryconfig-code-critique.md  (+4 more)
docs/: ceal-b-gate.md  ceal-bug-profile.md  ceal-ts-gate.md  dogfood-control.md  eval-gate.md  handoff.md  kill-gate.md  operator-acceptance.md  precision-gate.md  roadmap.md  spec-eval-harness.md  spec-floor.md  spec-layer0.md  spec-untested.md  ts-cross-corpus.md
fixtures/: ceal-ts-map.summary.json
harness/: README.md  bgate_lens.py  check_ac4.py  config.py  corpus_fit.py  corpus_freeze.py  corpus_schema.json  coverage.py  doctor.py  enrichment.py  enrichment_bykind.py  filter_recall.py  finding_io.py  floor_verdict.py  floor_worklist.py  label.py  label_io.py  mine.py  mine_ts.py  repo_fit.py  step1b.py  sweep.py  szz.py  test_bgate.py  test_corpus.py  test_coverage.py  test_enrichment.py  test_finding_io.py  test_step1b.py  test_sweep.py  validate_corpus.py
src/: catalog.rs  classify.rs  floor.rs  lib.rs  main.rs  pryconfig.rs  untested.rs
tests/: classify_smoke.rs  exclude_smoke.rs  pryconfig_smoke.rs
(+102 files in other folders)
